Fix alignment issues

--- a/app/src/components/FileUpload.scss
+++ b/app/src/components/FileUpload.scss
@@ -5,7 +5,7 @@
   border-radius: 10px;
   padding: 8px;
   min-height: 30vh;
-  height: 100%;
+  flex: 1;
 }
 
 .FileUpload-upload {
