--- a/app/src/components/Recognition.scss
+++ b/app/src/components/Recognition.scss
@@ -100,6 +100,7 @@
 .Recognition-help {
   font-size: calc(12px + 1vmin);
   margin-top: 3px;
+  margin-bottom: 0;
 
   a {
     color: $highlight-color;
